added uc 9 cat1 and cat2

--- a/Notebooks2022/build_a_thon_graph_v1.ipynb
+++ b/Notebooks2022/build_a_thon_graph_v1.ipynb
@@ -2208,9 +2208,48 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Created node: base station\n",
+            "Created node: UE location\n",
+            "Created relation: base station - has - UE location in usecase_008_cat2\n",
+            "Created node: mMiMO controller\n",
+            "Node already exists: UE location in ['usecase_008_cat2']\n",
+            "ignoring ...\n",
+            "Created relation: mMiMO controller - needs - UE location in usecase_008_cat2\n",
+            "Node already exists: mMiMO controller in ['usecase_008_cat2']\n",
+            "ignoring ...\n",
+            "Node already exists: optimization in ['usecase_007_cat1', 'usecase_007_cat2', 'usecase_008_cat1']\n",
+            "adding label usecase_008_cat2 in addition to ['usecase_007_cat1', 'usecase_007_cat2', 'usecase_008_cat1']\n",
+            "Created relation: mMiMO controller - has - optimization in usecase_008_cat2\n",
+            "Node already exists: optimization in ['usecase_007_cat1', 'usecase_007_cat2', 'usecase_008_cat1', 'usecase_008_cat2']\n",
+            "ignoring ...\n",
+            "Created node: goals\n",
+            "Created relation: optimization - has - goals in usecase_008_cat2\n",
+            "Node already exists: goals in ['usecase_008_cat2']\n",
+            "ignoring ...\n",
+            "Created node: system utilization\n",
+            "Created relation: goals - are - system utilization in usecase_008_cat2\n",
+            "Node already exists: goals in ['usecase_008_cat2']\n",
+            "ignoring ...\n",
+            "Created node: user experience\n",
+            "Created relation: goals - are - user experience in usecase_008_cat2\n",
+            "Node already exists: goals in ['usecase_008_cat2']\n",
+            "ignoring ...\n",
+            "Created node: target RSRP/SINR distribution\n",
+            "Created relation: goals - are - target RSRP/SINR distribution in usecase_008_cat2\n",
+            "Node already exists: goals in ['usecase_008_cat2']\n",
+            "ignoring ...\n",
+            "Created node: optimal antenna parameters\n",
+            "Created relation: goals - are - optimal antenna parameters in usecase_008_cat2\n"
+          ]
+        }
+      ],
       "source": [
         "app.create_actors_relationship_with_usecase(\"base station\", \"has\", \"UE location\", \"usecase_008_cat2\")\n",
         "app.create_actors_relationship_with_usecase(\"mMiMO controller\", \"needs\", \"UE location\", \"usecase_008_cat2\")\n",
@@ -2224,11 +2263,238 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Found actor-1: optimization\n",
+            "Found actor-2: base station\n",
+            "Found actor-3: UE location\n",
+            "Found actor-4: mMiMO controller\n",
+            "Found actor-5: goals\n",
+            "Found actor-6: system utilization\n",
+            "Found actor-7: user experience\n",
+            "Found actor-8: target RSRP/SINR distribution\n",
+            "Found actor-9: optimal antenna parameters\n"
+          ]
+        }
+      ],
       "source": [
         "app.find_all_usecase_actors_label(\"usecase_008_cat2\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### FG-AN-USECASE-009 cat1"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 14,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Failed to write data to connection ResolvedIPv4Address(('34.126.114.186', 7687)) (IPv4Address(('34.126.114.186', 7687)))\n",
+            "Failed to write data to connection IPv4Address(('a4270446.databases.neo4j.io', 7687)) (IPv4Address(('34.126.114.186', 7687)))\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Node already exists: Adaptation controller in ['usecase_004', 'usecase_005', 'usecase_007_cat1']\n",
+            "adding label usecase_009_cat1 in addition to ['usecase_004', 'usecase_005', 'usecase_007_cat1']\n",
+            "Created node: controller characteristics\n",
+            "Created relation: Adaptation controller - discovers - controller characteristics in usecase_009_cat1\n",
+            "Node already exists: Evolution controller in ['usecase_006_cat1', 'usecase_008_cat1']\n",
+            "adding label usecase_009_cat1 in addition to ['usecase_006_cat1', 'usecase_008_cat1']\n",
+            "Node already exists: intent in ['usecase_005']\n",
+            "adding label usecase_009_cat1 in addition to ['usecase_005']\n",
+            "Created relation: Evolution controller - accepts - intent in usecase_009_cat1\n",
+            "Node already exists: Evolution controller in ['usecase_006_cat1', 'usecase_008_cat1', 'usecase_009_cat1']\n",
+            "ignoring ...\n",
+            "Node already exists: controllers in ['usecase_001', 'usecase_004', 'usecase_006_cat1', 'usecase_007_cat1', 'usecase_007_cat2', 'usecase_008_cat1']\n",
+            "adding label usecase_009_cat1 in addition to ['usecase_001', 'usecase_004', 'usecase_006_cat1', 'usecase_007_cat1', 'usecase_007_cat2', 'usecase_008_cat1']\n",
+            "Created relation: Evolution controller - composes - controllers in usecase_009_cat1\n",
+            "Node already exists: Evolution controller in ['usecase_006_cat1', 'usecase_008_cat1', 'usecase_009_cat1']\n",
+            "ignoring ...\n",
+            "Node already exists: controllers in ['usecase_001', 'usecase_004', 'usecase_006_cat1', 'usecase_007_cat1', 'usecase_007_cat2', 'usecase_008_cat1', 'usecase_009_cat1']\n",
+            "ignoring ...\n",
+            "Created relation: Evolution controller - recommends - controllers in usecase_009_cat1\n",
+            "Node already exists: Evolution controller in ['usecase_006_cat1', 'usecase_008_cat1', 'usecase_009_cat1']\n",
+            "ignoring ...\n",
+            "Node already exists: controllers in ['usecase_001', 'usecase_004', 'usecase_006_cat1', 'usecase_007_cat1', 'usecase_007_cat2', 'usecase_008_cat1', 'usecase_009_cat1']\n",
+            "ignoring ...\n",
+            "Created relation: Evolution controller - evolves - controllers in usecase_009_cat1\n",
+            "Node already exists: Evolution controller in ['usecase_006_cat1', 'usecase_008_cat1', 'usecase_009_cat1']\n",
+            "ignoring ...\n",
+            "Node already exists: modules in ['usecase_007_cat2']\n",
+            "adding label usecase_009_cat1 in addition to ['usecase_007_cat2']\n",
+            "Created relation: Evolution controller - evolves - modules in usecase_009_cat1\n",
+            "Node already exists: Evolution controller in ['usecase_006_cat1', 'usecase_008_cat1', 'usecase_009_cat1']\n",
+            "ignoring ...\n",
+            "Created node: evolution algorithms\n",
+            "Created relation: Evolution controller - implements - evolution algorithms in usecase_009_cat1\n",
+            "Node already exists: Evolution controller in ['usecase_006_cat1', 'usecase_008_cat1', 'usecase_009_cat1']\n",
+            "ignoring ...\n",
+            "Node already exists: modules in ['usecase_007_cat2', 'usecase_009_cat1']\n",
+            "ignoring ...\n",
+            "Created relation: Evolution controller - recommends - modules in usecase_009_cat1\n",
+            "Node already exists: Evolution controller in ['usecase_006_cat1', 'usecase_008_cat1', 'usecase_009_cat1']\n",
+            "ignoring ...\n",
+            "Node already exists: controllers in ['usecase_001', 'usecase_004', 'usecase_006_cat1', 'usecase_007_cat1', 'usecase_007_cat2', 'usecase_008_cat1', 'usecase_009_cat1']\n",
+            "ignoring ...\n",
+            "composes already exists with usecase_009_cat1 between Evolution controller and controllers\n",
+            "Node already exists: Adaptation controller in ['usecase_004', 'usecase_005', 'usecase_007_cat1', 'usecase_009_cat1']\n",
+            "ignoring ...\n",
+            "Node already exists: controllers in ['usecase_001', 'usecase_004', 'usecase_006_cat1', 'usecase_007_cat1', 'usecase_007_cat2', 'usecase_008_cat1', 'usecase_009_cat1']\n",
+            "ignoring ...\n",
+            "Created relation: Adaptation controller - deploys - controllers in usecase_009_cat1\n",
+            "Node already exists: controllers in ['usecase_001', 'usecase_004', 'usecase_006_cat1', 'usecase_007_cat1', 'usecase_007_cat2', 'usecase_008_cat1', 'usecase_009_cat1']\n",
+            "ignoring ...\n",
+            "Created node: underlay specific APIs\n",
+            "Created relation: controllers - utilizes - underlay specific APIs in usecase_009_cat1\n",
+            "Created node: edge controllers\n",
+            "Node already exists: controllers in ['usecase_001', 'usecase_004', 'usecase_006_cat1', 'usecase_007_cat1', 'usecase_007_cat2', 'usecase_008_cat1', 'usecase_009_cat1']\n",
+            "ignoring ...\n",
+            "Created relation: edge controllers - are - controllers in usecase_009_cat1\n"
+          ]
+        }
+      ],
+      "source": [
+        "app.create_actors_relationship_with_usecase(\"Adaptation controller\", \"discovers\", \"controller characteristics\", \"usecase_009_cat1\")\n",
+        "app.create_actors_relationship_with_usecase(\"Evolution controller\", \"accepts\", \"intent\", \"usecase_009_cat1\")\n",
+        "app.create_actors_relationship_with_usecase(\"Evolution controller\", \"composes\", \"controllers\", \"usecase_009_cat1\")\n",
+        "app.create_actors_relationship_with_usecase(\"Evolution controller\", \"recommends\", \"controllers\", \"usecase_009_cat1\")\n",
+        "app.create_actors_relationship_with_usecase(\"Evolution controller\", \"evolves\", \"controllers\", \"usecase_009_cat1\")\n",
+        "app.create_actors_relationship_with_usecase(\"Evolution controller\", \"evolves\", \"modules\", \"usecase_009_cat1\")\n",
+        "app.create_actors_relationship_with_usecase(\"Evolution controller\", \"implements\", \"evolution algorithms\", \"usecase_009_cat1\")\n",
+        "app.create_actors_relationship_with_usecase(\"Evolution controller\", \"recommends\", \"modules\", \"usecase_009_cat1\")\n",
+        "app.create_actors_relationship_with_usecase(\"Evolution controller\", \"composes\", \"controllers\", \"usecase_009_cat1\")\n",
+        "app.create_actors_relationship_with_usecase(\"Adaptation controller\", \"deploys\", \"controllers\", \"usecase_009_cat1\")\n",
+        "app.create_actors_relationship_with_usecase(\"controllers\", \"utilizes\", \"underlay specific APIs\", \"usecase_009_cat1\")\n",
+        "app.create_actors_relationship_with_usecase(\"edge controllers\", \"are\", \"controllers\", \"usecase_009_cat1\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 15,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Found actor-1: controllers\n",
+            "Found actor-2: Adaptation controller\n",
+            "Found actor-3: intent\n",
+            "Found actor-4: Evolution controller\n",
+            "Found actor-5: modules\n",
+            "Found actor-6: controller characteristics\n",
+            "Found actor-7: evolution algorithms\n",
+            "Found actor-8: underlay specific APIs\n",
+            "Found actor-9: edge controllers\n"
+          ]
+        }
+      ],
+      "source": [
+        "app.find_all_usecase_actors_label(\"usecase_009_cat1\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### FG-AN-USECASE-009 cat2\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 16,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Created node: Emergency management controller\n",
+            "Node already exists: controllers in ['usecase_001', 'usecase_004', 'usecase_006_cat1', 'usecase_007_cat1', 'usecase_007_cat2', 'usecase_008_cat1', 'usecase_009_cat1']\n",
+            "adding label usecase_009_cat2 in addition to ['usecase_001', 'usecase_004', 'usecase_006_cat1', 'usecase_007_cat1', 'usecase_007_cat2', 'usecase_008_cat1', 'usecase_009_cat1']\n",
+            "Created relation: Emergency management controller - uses - controllers in usecase_009_cat2\n",
+            "Node already exists: controllers in ['usecase_001', 'usecase_004', 'usecase_006_cat1', 'usecase_007_cat1', 'usecase_007_cat2', 'usecase_008_cat1', 'usecase_009_cat1', 'usecase_009_cat2']\n",
+            "ignoring ...\n",
+            "Created node: emergencies\n",
+            "Created relation: controllers - detect - emergencies in usecase_009_cat2\n",
+            "Node already exists: controllers in ['usecase_001', 'usecase_004', 'usecase_006_cat1', 'usecase_007_cat1', 'usecase_007_cat2', 'usecase_008_cat1', 'usecase_009_cat1', 'usecase_009_cat2']\n",
+            "ignoring ...\n",
+            "Created node: network resource allocation\n",
+            "Created relation: controllers - optimize - network resource allocation in usecase_009_cat2\n",
+            "Node already exists: Emergency management controller in ['usecase_009_cat2']\n",
+            "ignoring ...\n",
+            "Node already exists: controllers in ['usecase_001', 'usecase_004', 'usecase_006_cat1', 'usecase_007_cat1', 'usecase_007_cat2', 'usecase_008_cat1', 'usecase_009_cat1', 'usecase_009_cat2']\n",
+            "ignoring ...\n",
+            "Created relation: Emergency management controller - instantiates - controllers in usecase_009_cat2\n",
+            "Node already exists: Emergency management controller in ['usecase_009_cat2']\n",
+            "ignoring ...\n",
+            "Node already exists: intent in ['usecase_005', 'usecase_009_cat1']\n",
+            "adding label usecase_009_cat2 in addition to ['usecase_005', 'usecase_009_cat1']\n",
+            "Created relation: Emergency management controller - input - intent in usecase_009_cat2\n",
+            "Node already exists: Emergency management controller in ['usecase_009_cat2']\n",
+            "ignoring ...\n",
+            "Node already exists: intent in ['usecase_005', 'usecase_009_cat1', 'usecase_009_cat2']\n",
+            "ignoring ...\n",
+            "Created relation: Emergency management controller - output - intent in usecase_009_cat2\n",
+            "Node already exists: controllers in ['usecase_001', 'usecase_004', 'usecase_006_cat1', 'usecase_007_cat1', 'usecase_007_cat2', 'usecase_008_cat1', 'usecase_009_cat1', 'usecase_009_cat2']\n",
+            "ignoring ...\n",
+            "Created node: network domain\n",
+            "Created relation: controllers - need - network domain in usecase_009_cat2\n",
+            "Node already exists: intent in ['usecase_005', 'usecase_009_cat1', 'usecase_009_cat2']\n",
+            "ignoring ...\n",
+            "Created node: ml pipeline\n",
+            "Created relation: intent - has - ml pipeline in usecase_009_cat2\n"
+          ]
+        }
+      ],
+      "source": [
+        "app.create_actors_relationship_with_usecase(\"Emergency management controller\", \"uses\", \"controllers\", \"usecase_009_cat2\")\n",
+        "app.create_actors_relationship_with_usecase(\"controllers\", \"detect\", \"emergencies\", \"usecase_009_cat2\")\n",
+        "app.create_actors_relationship_with_usecase(\"controllers\", \"optimize\", \"network resource allocation\", \"usecase_009_cat2\")\n",
+        "app.create_actors_relationship_with_usecase(\"Emergency management controller\", \"instantiates\", \"controllers\", \"usecase_009_cat2\")\n",
+        "app.create_actors_relationship_with_usecase(\"Emergency management controller\", \"input\", \"intent\", \"usecase_009_cat2\")\n",
+        "app.create_actors_relationship_with_usecase(\"Emergency management controller\", \"output\", \"intent\", \"usecase_009_cat2\")\n",
+        "app.create_actors_relationship_with_usecase(\"controllers\", \"need\", \"network domain\", \"usecase_009_cat2\")\n",
+        "app.create_actors_relationship_with_usecase(\"intent\", \"has\", \"ml pipeline\", \"usecase_009_cat2\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 17,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Found actor-1: controllers\n",
+            "Found actor-2: intent\n",
+            "Found actor-3: Emergency management controller\n",
+            "Found actor-4: emergencies\n",
+            "Found actor-5: network resource allocation\n",
+            "Found actor-6: network domain\n",
+            "Found actor-7: ml pipeline\n"
+          ]
+        }
+      ],
+      "source": [
+        "app.find_all_usecase_actors_label(\"usecase_009_cat2\")"
       ]
     },
     {
