added uc 10 cat1 and cat2

--- a/Notebooks2022/build_a_thon_graph_v1.ipynb
+++ b/Notebooks2022/build_a_thon_graph_v1.ipynb
@@ -2499,6 +2499,176 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### FG-AN-USECASE-010 cat1"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 19,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Created node: AN orchestrator\n",
+            "Node already exists: intent in ['usecase_005', 'usecase_009_cat1', 'usecase_009_cat2']\n",
+            "adding label usecase_010_cat1 in addition to ['usecase_005', 'usecase_009_cat1', 'usecase_009_cat2']\n",
+            "Created relation: AN orchestrator - accepts - intent in usecase_010_cat1\n",
+            "Node already exists: AN orchestrator in ['usecase_010_cat1']\n",
+            "ignoring ...\n",
+            "Node already exists: Evolution controller in ['usecase_006_cat1', 'usecase_008_cat1', 'usecase_009_cat1']\n",
+            "adding label usecase_010_cat1 in addition to ['usecase_006_cat1', 'usecase_008_cat1', 'usecase_009_cat1']\n",
+            "Created relation: AN orchestrator - configures - Evolution controller in usecase_010_cat1\n",
+            "Node already exists: AN orchestrator in ['usecase_010_cat1']\n",
+            "ignoring ...\n",
+            "Node already exists: Adaptation controller in ['usecase_004', 'usecase_005', 'usecase_007_cat1', 'usecase_009_cat1']\n",
+            "adding label usecase_010_cat1 in addition to ['usecase_004', 'usecase_005', 'usecase_007_cat1', 'usecase_009_cat1']\n",
+            "Created relation: AN orchestrator - configures - Adaptation controller in usecase_010_cat1\n",
+            "Node already exists: AN orchestrator in ['usecase_010_cat1']\n",
+            "ignoring ...\n",
+            "Node already exists: Experimentation controller in ['usecase_002']\n",
+            "adding label usecase_010_cat1 in addition to ['usecase_002']\n",
+            "Created relation: AN orchestrator - configures - Experimentation controller in usecase_010_cat1\n",
+            "Node already exists: intent in ['usecase_005', 'usecase_009_cat1', 'usecase_009_cat2', 'usecase_010_cat1']\n",
+            "ignoring ...\n",
+            "Created node: vertical specific inputs\n",
+            "Created relation: intent - has - vertical specific inputs in usecase_010_cat1\n",
+            "Node already exists: Experimentation controller in ['usecase_002', 'usecase_010_cat1']\n",
+            "ignoring ...\n",
+            "Created node: conrollers\n",
+            "Created relation: Experimentation controller - validates - conrollers in usecase_010_cat1\n",
+            "Node already exists: Adaptation controller in ['usecase_004', 'usecase_005', 'usecase_007_cat1', 'usecase_009_cat1', 'usecase_010_cat1']\n",
+            "ignoring ...\n",
+            "Node already exists: conrollers in ['usecase_010_cat1']\n",
+            "ignoring ...\n",
+            "Created relation: Adaptation controller - monitors - conrollers in usecase_010_cat1\n",
+            "Node already exists: AN orchestrator in ['usecase_010_cat1']\n",
+            "ignoring ...\n",
+            "Node already exists: reports in ['usecase_001', 'usecase_002', 'usecase_006_cat2']\n",
+            "adding label usecase_010_cat1 in addition to ['usecase_001', 'usecase_002', 'usecase_006_cat2']\n",
+            "Created relation: AN orchestrator - produces - reports in usecase_010_cat1\n",
+            "Node already exists: underlay in ['usecase_005']\n",
+            "adding label usecase_010_cat1 in addition to ['usecase_005']\n",
+            "Created node: CI/CD pipeline\n",
+            "Created relation: underlay - are - CI/CD pipeline in usecase_010_cat1\n",
+            "Node already exists: Adaptation controller in ['usecase_004', 'usecase_005', 'usecase_007_cat1', 'usecase_009_cat1', 'usecase_010_cat1']\n",
+            "ignoring ...\n",
+            "Created node: reference points\n",
+            "Created relation: Adaptation controller - discovers - reference points in usecase_010_cat1\n",
+            "Node already exists: underlay in ['usecase_005', 'usecase_010_cat1']\n",
+            "ignoring ...\n",
+            "Node already exists: reference points in ['usecase_010_cat1']\n",
+            "ignoring ...\n",
+            "Created relation: underlay - has - reference points in usecase_010_cat1\n",
+            "Node already exists: Evolution controller in ['usecase_006_cat1', 'usecase_008_cat1', 'usecase_009_cat1', 'usecase_010_cat1']\n",
+            "ignoring ...\n",
+            "Node already exists: controllers in ['usecase_001', 'usecase_004', 'usecase_006_cat1', 'usecase_007_cat1', 'usecase_007_cat2', 'usecase_008_cat1', 'usecase_009_cat1', 'usecase_009_cat2']\n",
+            "adding label usecase_010_cat1 in addition to ['usecase_001', 'usecase_004', 'usecase_006_cat1', 'usecase_007_cat1', 'usecase_007_cat2', 'usecase_008_cat1', 'usecase_009_cat1', 'usecase_009_cat2']\n",
+            "Created relation: Evolution controller - recommends - controllers in usecase_010_cat1\n",
+            "Node already exists: Adaptation controller in ['usecase_004', 'usecase_005', 'usecase_007_cat1', 'usecase_009_cat1', 'usecase_010_cat1']\n",
+            "ignoring ...\n",
+            "Created node: underlay capabilities\n",
+            "Created relation: Adaptation controller - discovers - underlay capabilities in usecase_010_cat1\n",
+            "Node already exists: underlay in ['usecase_005', 'usecase_010_cat1']\n",
+            "ignoring ...\n",
+            "Node already exists: underlay capabilities in ['usecase_010_cat1']\n",
+            "ignoring ...\n",
+            "Created relation: underlay - has - underlay capabilities in usecase_010_cat1\n"
+          ]
+        }
+      ],
+      "source": [
+        "app.create_actors_relationship_with_usecase(\"AN orchestrator\", \"accepts\", \"intent\", \"usecase_010_cat1\")\n",
+        "app.create_actors_relationship_with_usecase(\"AN orchestrator\", \"configures\", \"Evolution controller\", \"usecase_010_cat1\")\n",
+        "app.create_actors_relationship_with_usecase(\"AN orchestrator\", \"configures\", \"Adaptation controller\", \"usecase_010_cat1\")\n",
+        "app.create_actors_relationship_with_usecase(\"AN orchestrator\", \"configures\", \"Experimentation controller\", \"usecase_010_cat1\")\n",
+        "app.create_actors_relationship_with_usecase(\"intent\", \"has\", \"vertical specific inputs\", \"usecase_010_cat1\")\n",
+        "app.create_actors_relationship_with_usecase(\"Experimentation controller\", \"validates\", \"controllers\", \"usecase_010_cat1\")\n",
+        "app.create_actors_relationship_with_usecase(\"Adaptation controller\", \"monitors\", \"controllers\", \"usecase_010_cat1\")\n",
+        "app.create_actors_relationship_with_usecase(\"AN orchestrator\", \"produces\", \"reports\", \"usecase_010_cat1\")\n",
+        "app.create_actors_relationship_with_usecase(\"underlay\", \"are\", \"CI/CD pipeline\", \"usecase_010_cat1\")\n",
+        "app.create_actors_relationship_with_usecase(\"Adaptation controller\", \"discovers\", \"reference points\", \"usecase_010_cat1\")\n",
+        "app.create_actors_relationship_with_usecase(\"underlay\", \"has\", \"reference points\", \"usecase_010_cat1\")\n",
+        "app.create_actors_relationship_with_usecase(\"Evolution controller\", \"recommends\", \"controllers\", \"usecase_010_cat1\")\n",
+        "app.create_actors_relationship_with_usecase(\"Adaptation controller\", \"discovers\", \"underlay capabilities\", \"usecase_010_cat1\")\n",
+        "app.create_actors_relationship_with_usecase(\"underlay\", \"has\", \"underlay capabilities\", \"usecase_010_cat1\")\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 20,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Found actor-1: controllers\n",
+            "Found actor-2: reports\n",
+            "Found actor-3: Experimentation controller\n",
+            "Found actor-4: Adaptation controller\n",
+            "Found actor-5: underlay\n",
+            "Found actor-6: intent\n",
+            "Found actor-7: Evolution controller\n",
+            "Found actor-8: AN orchestrator\n",
+            "Found actor-9: vertical specific inputs\n",
+            "Found actor-10: conrollers\n",
+            "Found actor-11: CI/CD pipeline\n",
+            "Found actor-12: reference points\n",
+            "Found actor-13: underlay capabilities\n"
+          ]
+        }
+      ],
+      "source": [
+        "app.find_all_usecase_actors_label(\"usecase_010_cat1\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### FG-AN-USECASE-010 cat2"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "app.create_actors_relationship_with_usecase(\"Cloud service controller\", \"uses\", \"controllers\", \"usecase_010_cat2\")\n",
+        "app.create_actors_relationship_with_usecase(\"controllers\", \"needs\", \"intent\", \"usecase_010_cat2\")\n",
+        "app.create_actors_relationship_with_usecase(\"controllers\", \"needs\", \"simulation\", \"usecase_010_cat2\")\n",
+        "app.create_actors_relationship_with_usecase(\"controllers\", \"needs\", \"validation\", \"usecase_010_cat2\")\n",
+        "app.create_actors_relationship_with_usecase(\"validation\", \"needs\", \"KPI\", \"usecase_010_cat2\")\n",
+        "app.create_actors_relationship_with_usecase(\"validation\", \"needs\", \"AN sandbox\", \"usecase_010_cat2\")\n",
+        "app.create_actors_relationship_with_usecase(\"controllers\", \"output\", \"cloud service deployment\", \"usecase_010_cat2\")\n",
+        "app.create_actors_relationship_with_usecase(\"cloud service deployment\", \"needs\", \"optimization\", \"usecase_010_cat2\")\n",
+        "app.create_actors_relationship_with_usecase(\"controllers\", \"output\", \"network service deployment\", \"usecase_010_cat2\")\n",
+        "app.create_actors_relationship_with_usecase(\"network service deployment\", \"needs\", \"optimization\", \"usecase_010_cat2\")\n",
+        "app.create_actors_relationship_with_usecase(\"controllers\", \"needs\", \"monitors\", \"usecase_010_cat2\")\n",
+        "app.create_actors_relationship_with_usecase(\"monitors\", \"output\", \"reports\", \"usecase_010_cat2\")\n",
+        "app.create_actors_relationship_with_usecase(\"network service deployment\", \"needs\", \"technology migration\", \"usecase_010_cat2\")\n",
+        "app.create_actors_relationship_with_usecase(\"cloud service deployment\", \"needs\", \"technology migration\", \"usecase_010_cat2\")\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "app.find_all_usecase_actors_label(\"usecase_010_cat2\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "eBr7q13XvyeB"
       },
