added link to colab

--- a/YAML files/operaparser.ipynb
+++ b/YAML files/operaparser.ipynb
@@ -5,7 +5,7 @@
    "id": "77588bcc",
    "metadata": {},
    "source": [
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/vrra/FGAN-Build-a-thon-2022/blob/main/Notebooks2022/build_a_thon_graph_v1.ipynb)"
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://github.com/vrra/FGAN-Build-a-thon-2022/blob/master/YAML%20files/operaparser.ipynb)"
    ]
   },
   {
