--- a/Notebooks2022/opera_test.ipynb
+++ b/Notebooks2022/opera_test.ipynb
@@ -296,7 +296,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.7.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -310,7 +310,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.7.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "da816bfb4fc193208868a0e8d5e0aadd085f9c3004d83a433cf6c0b041182abd"
+   }
   }
  },
  "nbformat": 4,
