added link to colab

--- a/opera_test.ipynb
+++ b/opera_test.ipynb
@@ -13,7 +13,7 @@
       "id": "95a40230",
       "metadata": {},
       "source": [
-        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/vrra/FGAN-Build-a-thon-2022/blob/main/Notebooks2022/build_a_thon_graph_v1.ipynb)"
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/vrra/FGAN-Build-a-thon-2022/blob/54-upload-yaml-files/opera_test.ipynb)\n"
       ]
     },
     {
